--- a/.github/workflows/cicd_pipeline.yml
+++ b/.github/workflows/cicd_pipeline.yml
@@ -199,7 +199,7 @@ jobs:
     steps:
       - uses: actions/github-script@v7
         env:
-          DOCKER_IMAGE_VERSION: ${{ needs.build-docker.outputs.image_version }}
+          DOCKER_IMAGE_VERSION: ${{ needs.build-docker.outputs.build_version }}
           RELEASE_NAME: ${{ startsWith(github.ref_name, 'ls-release/') && 'ls-release' || 'ls-develop' }}
         with:
           github-token: ${{ secrets.GIT_PAT }}
