--- a/web/package.json
+++ b/web/package.json
@@ -203,6 +203,7 @@
     "@cypress/request": "3.0.0",
     "axios": "1.6.0",
     "cookie": "0.7.0",
+    "**/bin-check/**/cross-spawn": "6.0.6",
     "d3-color": "3.1.0",
     "debug": "4.3.1",
     "diff": "3.5.0",
