chore: LEAP-1717: update path-to-regexp to version 0.1.12 (#6927)
Co-authored-by: Gondragos <Gondragos@users.noreply.github.com>
Former-commit-id: b5e2108467aa20a1f3c403a80e3b7771bb842bb6

--- a/web/package.json
+++ b/web/package.json
@@ -209,6 +209,7 @@
     "diff": "3.5.0",
     "ejs": "3.1.10",
     "express": ">=4.19.2",
+    "express/path-to-regexp": "0.1.12",
     "follow-redirects": "^1.15.6",
     "ip": ">=2.0.1",
     "jpeg-js": "0.4.4",
