--- a/.github/workflows/fm-command.yml
+++ b/.github/workflows/fm-command.yml
@@ -1,23 +1,23 @@
-name: "/ff command"
+name: "/fm command"
 
 on:
   repository_dispatch:
-    types: [ ff-command ]
+    types: [ fm-command ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.client_payload.github.payload.issue.number }}-${{ github.event.client_payload.slash_command.command }}-${{ github.event.client_payload.slash_command.args.unnamed.arg1 || github.event.client_payload.slash_command.args.all }}
 
 jobs:
-  update-ff:
+  sync:
     name: "Update: Update Feature Flags"
-    if: github.event.client_payload.slash_command.args.unnamed.arg1 == 'update'
-    uses: ./.github/workflows/feature-flags-update.yml
+    if: github.event.client_payload.slash_command.args.unnamed.arg1 == 'sync'
+    uses: ./.github/workflows/follow-merge-upstream-repo-sync-v2.yml
     with:
-      ref: ${{ github.event.client_payload.pull_request.head.ref }}
+      branch_name: ${{ github.event.client_payload.pull_request.head.ref }}
     secrets: inherit
 
   help:
-    if: ${{ github.event.client_payload.slash_command.args.unnamed.arg1 == 'help' || !contains(fromJson('["update"]'), github.event.client_payload.slash_command.args.unnamed.arg1) }}
+    if: ${{ github.event.client_payload.slash_command.args.unnamed.arg1 == 'help' || !contains(fromJson('["sync"]'), github.event.client_payload.slash_command.args.unnamed.arg1) }}
     runs-on: ubuntu-latest
     timeout-minutes: 1
     steps:
@@ -30,5 +30,5 @@ jobs:
           body: |
             > Command | Description
             > --- | ---
-            > /ff update | Update feature flags
+            > /fm sync | Sync upstream prs and merge with pull request base
           reaction-type: hooray
