feat: DIA-1794: [FE] Implement home page in LSO and LSE (#6885)
Co-authored-by: bmartel <brandonmartel@gmail.com>
Co-authored-by: yyassi-heartex <104568407+yyassi-heartex@users.noreply.github.com>
Co-authored-by: hlomzik <hlomzik@gmail.com>
Co-authored-by: MihajloHoma <MihajloHoma@users.noreply.github.com>
Co-authored-by: borisheartex <borisheartex@users.noreply.github.com>
Former-commit-id: e95280e1d4731af31047009a25eebf237964f435

--- a/web/.stylelintrc.json
+++ b/web/.stylelintrc.json
@@ -4,6 +4,7 @@
     "selector-class-pattern": null,
     "custom-property-pattern": null,
     "no-descending-specificity": null,
+    "function-no-unknown": null,
     "scss/no-global-function-names": null,
     "scss/function-no-unknown": null,
     "selector-pseudo-class-no-unknown": [
