--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "4",
     "@thi.ng/rle-pack": "^3.1.30",
     "antd": "^4.3.3",
     "chroma-js": "^2.1.1",
@@ -59,6 +60,8 @@
     "history": "^4.10.1",
     "html-react-parser": "^1.2.4",
     "insert-after": "^0.1.4",
+    "jotai": "^2.11.0",
+    "jotai-tanstack-query": "^0.9.0",
     "js-base64": "^3.7.7",
     "keymaster": "^1.6.2",
     "konva": "^8.1.3",
