--- a/pyproject.toml
+++ b/pyproject.toml
@@ -209,7 +209,7 @@ setuptools = ">=75.4.0"
 tldextract = ">=5.1.3"
 
 # Humansignal repo dependencies
-label-studio-sdk = {url = "https://github.com/HumanSignal/label-studio-sdk/archive/09995cf0c72398322af949bb13de034a7bbb785f.zip"}
+label-studio-sdk = "1.0.10"
 
 [tool.poetry.group.test.dependencies]
 pytest = "7.2.2"
