chore: bump twine again (#7076)
Former-commit-id: 3900a7a609ba3a77b42d215396ea916e945b2e20

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -230,7 +230,7 @@ moto = ">=4.2.6"
 requests-mock = "1.12.1"
 
 [tool.poetry.group.build.dependencies]
-twine = "==6.0.1"
+twine = ">=6.1.0"
 packaging = ">=24.2"
 
 [tool.poetry.extras]
